update: set line height on codeblock to prevent layout shift

--- a/templates/styles/blog/default.css
+++ b/templates/styles/blog/default.css
@@ -121,6 +121,7 @@ footer {
     margin-block-start: 1em;
     margin-block-end: 1em;
     overflow-x: auto;
+    line-height: 125%;
 }
 
 /* blog post list */
